--- a/package.json
+++ b/package.json
@@ -9,18 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
+    "@remixicon/react": "^4.2.0",
+    "@tremor/react": "^3.17.4",
+    "@turf/turf": "^7.0.0",
+    "@vercel/analytics": "^1.3.1",
+    "mapbox-gl": "^3.5.2",
+    "next": "14.2.5",
+    "react": "link:@vercel/analytics/react",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "react-map-gl": "^7.1.7",
+    "tailwind-merge": "^2.4.0",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "typescript": "^5"
   }
 }
