--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tremor/react": "^3.17.4",
     "@turf/turf": "^7.0.0",
     "@vercel/analytics": "^1.3.1",
+    "immer": "^10.1.1",
     "mapbox-gl": "^3.5.2",
     "next": "14.2.5",
     "react": "link:@vercel/analytics/react",
