--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tremor/react": "^3.17.4",
     "@turf/turf": "^7.0.0",
     "@vercel/analytics": "^1.3.1",
+    "geojson": "^0.5.0",
     "immer": "^10.1.1",
     "mapbox-gl": "^3.5.2",
     "next": "14.2.5",
@@ -23,6 +24,7 @@
     "zustand": "^4.5.4"
   },
   "devDependencies": {
+    "@types/geojson": "^7946.0.14",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
