--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/tailwindcss": "^0.2.1",
     "@remixicon/react": "^4.2.0",
     "@tremor/react": "^3.17.4",
     "@turf/turf": "^7.0.0",
@@ -31,7 +32,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.6",
     "typescript": "^5"
   }
 }
