--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "oregon-old-growth",
+  "author": {
+    "name": "Al Miller",
+    "url": "https://anmiller.com"
+  },
   "version": "0.1.0",
-  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -14,6 +17,7 @@
     "@tremor/react": "^3.17.4",
     "@turf/turf": "^7.0.0",
     "@vercel/analytics": "^1.3.1",
+    "clsx": "^2.1.1",
     "geojson": "^0.5.0",
     "immer": "^10.1.1",
     "mapbox-gl": "^3.5.2",
